overflow in note detail fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -367,6 +367,7 @@ form input{
     padding: 0.2rem 1rem;
     border-radius: 5px;
     color: #545454;
+    margin-bottom: 3rem ;
 }
 
 .note-text{
@@ -536,7 +537,7 @@ table {
 }
 
 #myBtn:hover {
-    filter: drop-shadow(0px 0px 19px #ffff);
+    filter: drop-shadow(0px 0px 9px #ffadc8);
 }
 
 .back-top-icon{
@@ -547,4 +548,17 @@ table {
     width:3rem;
     border: none;
     background: none;
+}
+
+.add-small:hover{
+    filter: drop-shadow(0px 0px 2px #adc7ff);
+}
+
+.text-limit{
+    width: 60vw;
+}
+
+.wrapped-text {
+    max-width: 100%; /* Set the maximum width of the container */
+    word-wrap: break-word; /* Allow long words to be broken and wrap to the next line */
 }
